--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "fastify": "^4.28.1",
     "pg": "^8.12.0"
   }
